<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <com.journeyapps.barcodescanner.DecoratedBarcodeView
            android:id="@+id/barcode_scanner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/barcodePreview" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/scan_preview" app:layout_constraintTop_toBottomOf="@+id/history"
            android:layout_marginBottom="@dimen/global_margin" app:layout_constraintBottom_toTopOf="@+id/cta_fight"
            android:layout_marginStart="@dimen/global_margin" android:layout_marginEnd="@dimen/global_margin" android:layout_marginTop="@dimen/global_margin"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp" android:src="@drawable/ff_logo"
            android:id="@+id/ff_logo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_above="@+id/barcode_scanner"
            android:layout_marginEnd="@dimen/global_margin"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY" android:layout_marginStart="@dimen/global_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:adjustViewBounds="true" android:contentDescription="@string/app_name"/>
    <TextView
            android:text="@string/scan_instruction_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instruction" android:layout_marginTop="@dimen/global_margin"
            app:layout_constraintTop_toBottomOf="@+id/ff_logo" android:fontFamily="@font/roboto_medium"
            android:typeface="normal" android:textColor="@color/white" android:textSize="20sp"
            android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="fill_parent"
            android:src="@drawable/scan_focus"
            android:id="@+id/focus" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/global_margin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/global_margin"
            android:scaleType="fitXY" android:contentDescription="@string/scan_focus"
            android:layout_height="wrap_content" android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/scan_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/history"
            android:fontFamily="@font/roboto_medium"
            android:typeface="normal" android:textColor="@color/white" android:textSize="20sp"
            android:textAlignment="center" android:layout_marginStart="@dimen/global_margin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/global_margin"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="@dimen/global_margin" app:layout_constraintTop_toBottomOf="@+id/focus"/>
    <Button
            android:text="@string/scan_cta_fight"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/cta_fight"
            android:layout_marginBottom="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="startScan"
            android:layout_marginStart="@dimen/global_margin" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/global_margin"
            android:background="@drawable/ctabg_primary" android:fontFamily="@font/roboto_medium"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0" android:typeface="normal" android:textColor="@color/white"
            android:elevation="10dp"/>
</android.support.constraint.ConstraintLayout>