<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" tools:context=".ScanActivity"
        android:layout_height="match_parent"
>
    <com.journeyapps.barcodescanner.DecoratedBarcodeView
            android:id="@+id/barcode_scanner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
    </com.journeyapps.barcodescanner.DecoratedBarcodeView>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/scan_done" android:background="@android:color/black"
            android:alpha="0">

        <Button
                style="@style/bottomButton"
                android:text="@string/scan_cta_fight"
                android:id="@+id/cta_fight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="launchFight"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/ctabg_primary"
                android:textColor="@color/black"/>
        <TextView
                android:text="@string/scan_premium_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/premium_hint" android:textAlignment="center"
                android:textColor="@color/white" android:textSize="20sp" android:fontFamily="@font/roboto_medium"
                android:typeface="normal" android:layout_marginStart="@dimen/global_margin"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/global_margin"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/h_guideline"/>
        <android.support.constraint.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/h_guideline"
                app:layout_constraintGuide_percent="0.5"/>
        <TextView
                style="@style/link"
                android:text="@string/scan_premium_cta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/premium_cta"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/global_margin" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="@dimen/global_margin" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/h_guideline"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/v_guideline" app:layout_constraintGuide_percent="0.5"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp" android:src="@drawable/ic_fightfood_logo"
            android:id="@+id/ff_logo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_above="@+id/barcode_scanner"
            android:layout_marginEnd="@dimen/global_margin"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY" android:layout_marginStart="@dimen/global_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:adjustViewBounds="true" android:contentDescription="@string/app_name"/>
    <TextView
            style="@style/infoText"
            android:text="@string/scan_instruction_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instruction" android:layout_marginTop="@dimen/global_margin"
            app:layout_constraintTop_toBottomOf="@+id/ff_logo" android:textColor="@color/white"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="fill_parent"
            android:src="@drawable/ic_fight_focus"
            android:id="@+id/focus" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/global_margin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/global_margin"
            android:scaleType="fitXY" android:contentDescription="@string/scan_focus"
            android:layout_height="wrap_content" android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            style="@style/infoText"
            android:text="@string/scan_history_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/history"
            android:typeface="normal" android:textColor="@color/white"
            android:layout_marginStart="@dimen/global_margin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/global_margin"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="@dimen/global_margin" app:layout_constraintTop_toBottomOf="@+id/focus"/>
    <android.support.v7.widget.CardView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/v_guideline"
            android:layout_marginEnd="@dimen/global_margin" android:layout_marginTop="@dimen/global_margin_double"
            app:layout_constraintTop_toBottomOf="@+id/history" android:id="@+id/history_1"
            app:cardBackgroundColor="@color/whiteAlpha">

        <ImageView
                android:id="@+id/history_1_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/scan_history"/>
    </android.support.v7.widget.CardView>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@drawable/ic_close_button"
            android:id="@+id/history_1_close"
            android:contentDescription="@string/scan_history_close"
            android:onClick="closeHistory"
            android:tag="1"
            android:layout_marginBottom="56dp" app:layout_constraintBottom_toBottomOf="@+id/history_1"
            android:layout_marginStart="56dp" app:layout_constraintStart_toStartOf="@+id/history_1" android:alpha="0"
            android:elevation="10dp"/>
    <android.support.v7.widget.CardView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="@+id/v_guideline"
            android:layout_marginStart="@dimen/global_margin" android:layout_marginTop="@dimen/global_margin_double"
            app:layout_constraintTop_toBottomOf="@+id/history" android:id="@+id/fight_1"
            app:cardBackgroundColor="@color/whiteAlpha">

        <ImageView
                android:id="@+id/history_2_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/scan_history"/>
    </android.support.v7.widget.CardView>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@drawable/ic_close_button"
            android:id="@+id/history_2_close"
            android:contentDescription="@string/scan_history_close"
            android:onClick="closeHistory"
            android:tag="2"
            android:layout_marginBottom="56dp" app:layout_constraintBottom_toBottomOf="@+id/fight_1"
            android:layout_marginStart="56dp" app:layout_constraintStart_toStartOf="@+id/fight_1" android:alpha="0"
            android:elevation="10dp"/>
</android.support.constraint.ConstraintLayout>