<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultActivity">

    <TextView
            style="@style/th"
            android:text="@string/result_natural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/natural"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/quality" android:layout_marginStart="16dp"/>
    <TextView
            style="@style/th"
            android:text="@string/result_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quality"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline4" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"/>
    <TextView
            style="@style/th"
            android:text="@string/result_energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/energy"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/quality" android:layout_marginEnd="16dp"
    />
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/global_margin_alt"
            android:id="@+id/guideline"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/global_margin"
            android:id="@+id/guideline2"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_end="@dimen/global_margin"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="108dp" android:id="@+id/guideline4"
    />
    <Button
            style="@style/bottomButton"
            android:text="@string/result_restart"
            android:id="@+id/cta_fight"
            android:onClick="scanAgain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/ctabg_primary"
            android:textColor="@color/black"/>
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/energy"
            android:fillViewport="true"
            android:id="@+id/scrollView2" android:layout_marginTop="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:paddingBottom="114dp">

            <android.support.constraint.Guideline
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/guideline6"
                    app:layout_constraintGuide_begin="@dimen/result_img"/>
            <android.support.constraint.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/guideline5"
                    app:layout_constraintGuide_end="114dp"/>
            <android.support.constraint.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/guideline7"
                    app:layout_constraintGuide_end="194dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="479dp"/>
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp" app:srcCompat="@drawable/ic_award"
                    android:id="@+id/premium_img" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline6" android:layout_marginStart="16dp"
                    android:color="@color/yellow" android:layout_marginEnd="8dp"
                    android:contentDescription="@string/result_premium_cta"
                    android:layout_marginTop="@dimen/global_margin_double"
                    app:layout_constraintTop_toBottomOf="@+id/result_list"/>
            <TextView
                    style="@style/link"
                    android:text="@string/result_premium_cta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow"
                    android:id="@+id/premium_cta"
                    android:textAllCaps="true"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="@+id/guideline6" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/premium_info"/>
            <TextView
                    style="@style/p"
                    android:text="@string/result_premium_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/premium_info"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toTopOf="@+id/premium_img"
                    app:layout_constraintStart_toStartOf="@+id/guideline6"
                    android:layout_marginStart="8dp"
            />
            <android.support.v7.widget.RecyclerView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/result_list"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>