<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FightActivity" android:background="@color/colorPrimary">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp" app:srcCompat="@drawable/ic_thunder"
            android:id="@+id/fight_thunder" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/global_margin"
            android:scaleType="fitXY" android:layout_marginStart="@dimen/global_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:adjustViewBounds="true" android:contentDescription="@string/app_name"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/punchline"/>
    <TextView
            style="@style/h1"
            android:text="@string/fight_start_punchline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/punchline"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/global_margin_double"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="@dimen/global_margin_double"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="@dimen/global_margin_double"
            android:elevation="20dp"/>

    <android.support.v7.widget.CardView
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:cardCornerRadius="10dp"
            android:id="@+id/fight_1"
            app:cardBackgroundColor="@color/whiteAlpha"
            android:layout_marginEnd="@dimen/global_margin_double"
            app:layout_constraintEnd_toStartOf="@+id/v_guideline" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/fight_thunder" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.75">

        <ImageView
                android:id="@+id/fight_1_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/scan_history"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:cardCornerRadius="10dp"
            android:id="@+id/fight_2"
            app:cardBackgroundColor="@color/whiteAlpha"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/global_margin_double"
            app:layout_constraintStart_toStartOf="@+id/v_guideline"
            app:layout_constraintTop_toBottomOf="@+id/punchline"
            app:layout_constraintBottom_toBottomOf="@+id/fight_thunder" app:layout_constraintVertical_bias="0.25">

        <ImageView
                android:id="@+id/fight_2_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/scan_history"/>
    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/v_guideline" app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/h_guideline"
            app:layout_constraintGuide_percent="0.5"
    />

</android.support.constraint.ConstraintLayout>